# cookiecutter-pypi

./: cookiecutter.json
.github/: README.rst
docs/: console_script_setup.rst  prompts.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/: CONTRIBUTING.rst  README.rst
{{cookiecutter.project_slug}}/docs/: authors.rst  history.rst  readme.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py
